<resources>
    <!-- Disini tempat perubahan string -->
    <string name="app_name">Tugas Bottom Navigation</string>
    <string name="home">Home</string>
    <string name="likes">Likes</string>
    <string name="uploads">Uploads</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="likes_fragment">Likes Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="uploads_fragment">Uploads Fragment</string>
</resources>
